overflow issue fixed

--- a/style.css
+++ b/style.css
@@ -47,6 +47,9 @@ img {
 }
 .right-logo {
   max-width: 200px;
+  border: 2px solid #000;
+  padding: 4px;
+  border-radius: var(--radius);
 }
 .navbar {
   z-index: 10;
@@ -683,6 +686,7 @@ footer {
 .masonry-item {
   border-radius: 8px;
   overflow: hidden;
+  border: 5px solid var(--blue);
 }
 .masonry-item img {
   width: 100%;
